<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">O2OMobile</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_over">没有更多内容</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="not_have_more">没有更多内容</string>
    <string name="nearest_me">离我最近</string>
    <string name="most_expensive">价格最高</string>
    <string name="price_lowest">价格最低</string>
    <string name="newest_publish">最新发布</string>
    <string name="none">无</string>
    <string name="lifecycle_all">所有</string>
    <string name="lifecycle_visible">可见</string>
    <string name="lifecycle_frontdeskoperation">前台运行</string>
    <string name="apply_money_success">提现申请成功</string>
    <string name="got_it">知道了</string>
    <string name="password">密码</string>
    <string name="mobile_phone">手机号</string>
    <string name="login">登录</string>
    <string name="no_account_now_signup">没有账户？现在注册</string>
    <string name="verify_code">验证码</string>
    <string name="get_vetify_code">获取验证码</string>
    <string name="nickname">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="complete_signup">完成注册</string>
    <string name="publish_order">发布需求</string>
    <string name="yuan">元</string>
    <string name="appoint_location">预约地点</string>
    <string name="please_wait_now_notificationing">请您耐心等待，正在通知服务者</string>
    <string name="informed">已通知</string>
    <string name="nearby_receiver">位附近服务者</string>
    <string name="look_up_order">查看订单</string>
    <string name="order_status">订单状态</string>
    <string name="order_sn">订单编号</string>
    <string name="sevice_type">服务类型</string>
    <string name="appointment_time">预约时间</string>
    <string name="sevice_location">服务地点</string>
    <string name="service_price">服务报酬</string>
    <string name="transation_money">交易金额</string>
    <string name="service_remark">服务备注</string>
    <string name="receive_order_success">接单成功</string>
    <string name="cancel_order">取消订单</string>
    <string name="confirm_complete">确认完成</string>
    <string name="pay_online">线上支付</string>
    <string name="pay_offline">线下支付</string>
    <string name="cancel_pay">取消支付</string>
    <string name="confirm_money">确认金额</string>
    <string name="original_money">原始金额</string>
    <string name="modify_money">修改金额</string>
    <string name="if_not_need_blank_space">如果不需要修改留空即可</string>
    <string name="fill_in_money">填写金额</string>
    <string name="cancel">取消</string>
    <string name="receiver">接单人</string>
    <string name="look_up_evaluate">查看评价</string>
    <string name="service_evaluate">服务评价</string>
    <string name="evaluate_optional">评价（可选）</string>
    <string name="submit_evalate">提交评价</string>
    <string name="complain_text">亲，哪里不给力？欢迎指导建议！</string>
    <string name="complain">投诉</string>
    <string name="order_evaluate_complete">订单评价完成</string>
    <string name="share_order">您可以把订单分享出去</string>
    <string name="share_evalute">分享评价</string>
    <string name="go_back_order">返回订单</string>
    <string name="float_window_setting">浮窗设置</string>
    <string name="confirm">确定</string>
    <string name="unfinished_order">未完成订单</string>
    <string name="finished_order">已完成订单</string>
    <string name="older_password">旧密码</string>
    <string name="input_old_password">输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="save">保存</string>
    <string name="personal_signature">个人签名</string>
    <string name="personal_brief">个人简介</string>
    <string name="none_content">没有内容</string>
    <string name="price_scope">价格范围</string>
    <string name="yuan_start">元起</string>
    <string name="project_type">项目类型</string>
    <string name="save_service">保存服务</string>
    <string name="submit_apply">提交申请</string>
    <string name="stair_category">一级类目</string>
    <string name="second_category">二级类目</string>
    <string name="my_avatar">我的头像</string>
    <string name="my_service">我的服务</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="account_logout">账户登出</string>
    <string name="open_float_view">开启悬浮窗</string>
    <string name="close_float_view">关闭悬浮窗</string>
    <string name="simulate_3g_network">模拟3G网络</string>
    <string name="simulate_2g_network">模拟2G网络</string>
    <string name="invite_firend">邀请好友</string>
    <string name="invite_firend_get_recharge">邀请朋友获得充值</string>
    <string name="share_to_firend">分享给朋友</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="experience_edition_test">测试版体验</string>
    <string name="home_page">首 页</string>
    <string name="publish">发 单</string>
    <string name="receive">接 单</string>
    <string name="message">消 息</string>
    <string name="message_notification">消息通知</string>
    <string name="systerm_notification">系统通知</string>
    <string name="camera">相机拍摄</string>
    <string name="album">本地图片</string>
    <string name="request_he_help">请他帮忙</string>
    <string name="look_up_all">查看全部</string>
    <string name="client_evaluate">客户评价</string>
    <string name="good_reputation_proportion">好评率</string>
    <string name="please_later_on">请稍后...</string>
    <string name="my_message">我的消息</string>
    <string name="friend_line">朋友圈</string>
    <string name="sina">新浪微博</string>
    <string name="qzone">QQ空间</string>
    <string name="cancel_share">取消分享</string>
    <string name="next">下一步</string>
    <string name="haved_account_login_now">已有账户？现在登录</string>
    <string name="good_evaluate_prior">好评优先</string>
    <string name="loosen_hand_end_record">松手以结束录音</string>
    <string name="protocol_log">协议log</string>
    <string name="activity_period">activity周期</string>
    <string name="photo_choose">图片选择</string>
    <string name="detail">详情</string>
    <string name="please_input_mobile_phone">手机号码不能为空</string>
    <string name="please_input_password">密码不能为空</string>
    <string name="wrong_mobile_phone">手机号码输入不正确</string>
    <string name="please_enter_correct_password_format">请输入正确格式的密码</string>
    <string name="exit_again">再按一次退出</string>
    <string name="mobile_phone_or_password_error">手机号或密码错误</string>
    <string name="please_input_verify_code">验证码不能为空</string>
    <string name="please_enter_correct_verify_code_format">请输入正确格式验证码</string>
    <string name="get_verify_code_again">重新获取验证码</string>
    <string name="resend_after">秒后重新发送</string>
    <string name="please_input_nickname">昵称不能为空</string>
    <string name="nickname_wrong_format_hint">"昵称一般由1-16位字符组成</string>
    <string name="password_wrong_format_hint">"密码必须有6-20位字符组成"</string>
    <string name="two_passwords_differ_hint">"请注意两次密码输入不一致哦"</string>
    <string name="select_service">"请选择服务分类"</string>
    <string name="file_does_not_exist">"文件不存在"</string>
    <string name="price_range">"请输入价格范围"</string>
    <string name="right_price">"请输入正确价格"</string>
    <string name="appoint_time">"请选择预约时间"</string>
    <string name="wrong_appoint_time_hint">"预约时间要大于当前时间"</string>
    <string name="appoint_location_hint">"请输入预约地点"</string>
    <string name="choose_time">"选择时间"</string>
    <string name="record_time_too_short">"录音时间太短"</string>
    <string name="public_success">"发布成功"</string>
    <string name="meter">"米"</string>
    <string name="kilometre">"千米"</string>
    <string name="finding">正在查找中</string>
    <string name="find_end">查找结束</string>
    <string name="notification_end">通知结束</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="input_password">请输入当前密码</string>
    <string name="new_password_wrong_format_hint">新密码必须有6-20位字符组成</string>
    <string name="cacel_order_or_not">是否取消订单</string>
    <string name="receive_order_fail">接单失败</string>
    <string name="order_detail">订单详情</string>
    <string name="order_have_canceled">订单已取消</string>
    <string name="wait_for_evaluate">等待对方评价</string>
    <string name="evaluate_now">现在点评</string>
    <string name="confirm_pay">确认支付</string>
    <string name="wait_for_confirm_pay">等待对方确认支付</string>
    <string name="wait_for_pay">等待对方支付</string>
    <string name="immediately_pay">立即付款</string>
    <string name="wait_for_complete">等待对方完成</string>
    <string name="order_have_been_received">订单已被接</string>
    <string name="receive_immediately">马上接单</string>
    <string name="send_evaluation">发表评论</string>
    <string name="please_choose_servic_evaluation">请选择服务点评</string>
    <string name="evaluate_success">评论成功</string>
    <string name="complain_success">投诉成功</string>
    <string name="input_complain_content">请输入投诉内容</string>
    <string name="evaluate_complete">评价完成</string>
    <string name="order_evaluate">订单评价</string>
    <string name="edit_signature">修改个人签名</string>
    <string name="signature_success">签名修改成功</string>
    <string name="signature_not_null">个人签名不能为空</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="edit_nickname_success">昵称修改成功</string>
    <string name="edit_brief">修改个人简介</string>
    <string name="brief_edit_success">个人简介修改成功</string>
    <string name="brief_wrong_format_hint">个人简介不能为空</string>
    <string name="modify_service">编辑服务</string>
    <string name="price_edit_success">价格修改成功</string>
    <string name="privce_not_null" >价格不能为空</string>
    <string name="apply_certificate" >申请认证</string>
    <string name="apply_certificate_success">申请认证成功</string>
    <string name="evaluation_list">评价列表</string>
    <string name="setting">设置</string>
    <string name="change_avatar_success">头像修改成功</string>
    <string name="logout_success">注销成功</string>
    <string name="photo_not_exsit">图片不存在</string>
    <string name="please_input_feedback">请输入反馈内容</string>
    <string name="feedback_success">反馈成功</string>
    <string name="profile_brief_detail">个人简介详情</string>
    <string name="look_up_or_not">，是否查看?</string>
    <string name="no_content">无内容</string>
    <string name="need_help">需要帮助</string>
    <string name="request_around">周边需求</string>
    <string name="balance">余额：</string>
    <string name="share_title">O2OMobile</string>
    <string name="share_content">感谢使用O2OMobile开源产品，最新资讯请前往 http://www.o2omobile.com.cn</string>
    <string name="cash_amount">提现金额</string>
    <string name="apply_cash_desc">最小提现金额为300元。一般为10个工作日到账</string>
    <string name="apply_cash_now">现在申请</string>
    <string name="my_cash_list">我的提现</string>
    <string name="apply_cash">申请提现</string>
    <string name="apply_cash_date">申请时间：</string>
    <string name="apply_cash_in_progress">处理中</string>
    <string name="apply_cash_succeed">提现成功</string>
    <string name="apply_cash_failed">提现失败</string>
    <string name="cash_amount_can_not_empty">金额不能为空</string>
    <string name="cash_amount_limit">最小提现金额为300元</string>
    <string name="cash_amount_not_enough">账户金额不足</string>
    <string name="applying_cash_failed">提现申请失败</string>
    <string name="service">客服</string>

</resources>