<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/order_play_order_view"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_gravity="top"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/orderlist_pay_background"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_sn"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/order_play_order_sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="1234567890"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#c4c4c4c4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sevice_type"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/order_play_order_service_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="干活"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sevice_location"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/order_play_order_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#c4c4c4c4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_price"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/order_play_order_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="100.00元"
                android:textColor="#39BCED"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_play_button_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/order_play_online"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/c1_apply_btn_select"
            android:gravity="center"
            android:text="@string/pay_online"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/order_play_offline"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/c1_apply_btn_select"
            android:gravity="center"
            android:text="@string/pay_offline"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/order_play_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/c1_apply_btn_select"
            android:gravity="center"
            android:text="@string/cancel_pay"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>