<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" 
            android:background="#c4c4c4"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/photo_choose"
                android:textColor="#000000"
                android:textSize="22dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="#4c000000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_camera"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" 
            android:background="@drawable/textbg_select">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/camera"
                android:textColor="#000000"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

        <LinearLayout
            android:id="@+id/register_photo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@drawable/textbg_select" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/album"
                android:textColor="#000000"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>